<resources>
    <string name="app_name">Cento</string>
    <string name="txt_dashboard">Dashboard</string>
    <string name="txt_john">Saad Tariq</string>
    <string name="txt_san">Karachi, PK.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="txt_device">Devices</string>
    <string name="txt_schedule">Schedule Tasks</string>
    <string name="txt_schedule_time">Schedule Task Time</string>
    <string name="txt_restrictions">Restrictions</string>
    <string name="txt_fan">Fan</string>
    <string name="txt_status">Status</string>
    <string name="txt_drawing">Drawing Room</string>
    <string name="txt_on">ON</string>
    <string name="txt_updated">Last Added on:</string>
    <string name="txt_dated">April 18th, 2020</string>
    <string name="txt_text">Active Devices</string>
    <string name="txt_social">Social Ranking</string>
    <string name="txt_mmber">Membership</string>
    <string name="home">Home</string>
    <string name="add">Add Device</string>
    <string name="pofile">Account</string>
    <string name="txt_add_device">Add Devices</string>
    <string name="txt_organized_devices">Organized Devices</string>
    <string name="txt_allDevices">All Devices</string>
    <string name="txt_welcome">Welcome!</string>
    <string name="txt_intro1">This is Cento Smart Home app</string>
    <string name="txt_an_app">An App where you can set</string>
    <string name="txt_all_your">all your home appliances in one go</string>
    <string name="txt_get">GET STARTED</string>
    <string name="txt_acdevice">Active Devices</string>
    <string name="txt_subs">Subscriptions</string>
    <string name="txt_support">Tech Support</string>
    <string name="txt_category">Device Category</string>
    <string name="txt_device_set">Power</string>
    <string name="txt_bronze">Bronze Membership</string>
    <string name="txt_silver">Silver Membership</string>
    <string name="txt_gold">Gold Membership</string>
    <string name="txt_name">Saad Tariq</string>
    <string name="txt_city">Karachi, Pakistan</string>
    <string name="txt_add">Add a device</string>
    <string name="txt_pickDate">Select Date</string>
    <string name="txt_pickTime">Select Time</string>
    <string name="mode_24_hours">Use 24 Hours</string>
    <string name="txt_control_devices">Control Devices</string>
    <string name="txt_remove_device">Remove Devices</string>
    <string name="txt_turn">Turn On/Off</string>
    <string name="txt_start"><![CDATA[Start Date & Time]]></string>
    <string name="txt_end"><![CDATA[End Date & Time]]></string>
</resources>