<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:hedgehog="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/devices_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="02dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="16dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#FCB9E847"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/manage_dev_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/txt_fan"
                android:textColor="@color/blue_bg"
                android:textSize="22dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="05dp"
                android:layout_marginBottom="05dp">

                <TextView
                    android:id="@+id/manage_dev_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/poppins_bold"
                    android:singleLine="true"
                    android:text="@string/txt_drawing"
                    android:textColor="@color/black"
                    android:textSize="16dp" />


                <!-- Toggle Switch -->
                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/manage_dev_toggle"
                    android:layout_width="100dp"
                    android:layout_height="200dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:layout_constraintVertical_bias="0.4"
                    app:lottie_autoPlay="false"
                    app:lottie_fileName="toggle_switch.json"
                    app:lottie_loop="false"
                    app:lottie_speed="1.75" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/txt_updated"
                    android:textColor="@color/black"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/manage_dev_updated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/txt_dated"
                    android:textColor="@color/black"
                    android:textSize="12dp" />
            </LinearLayout>
            <!--            <RatingBar-->
            <!--                android:id="@+id/ratingBar"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="center_horizontal"-->
            <!--                android:maxHeight="48dp"-->
            <!--                android:minHeight="48dp"-->
            <!--                android:stepSize="0.1"-->
            <!--                android:numStars="5"-->
            <!--                android:progressTint="@color/spinner_bg"-->
            <!--                android:secondaryProgressTint="@color/kprogresshud_grey_color"-->
            <!--                hedgehog:targetApi="lollipop" />-->
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>