<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="80dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_activeDevices"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="05dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:fontFamily="@font/poppins_bold"
                        android:gravity="center"
                        android:src="@drawable/active_devices" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:gravity="center"
                        android:text="@string/txt_acdevice"
                        android:textColor="@color/red_bg"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_devices"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="05dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:fontFamily="@font/poppins_bold"
                        android:gravity="center"
                        android:src="@drawable/devices" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:gravity="center"
                        android:text="@string/txt_device"
                        android:textColor="@color/red_bg"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_membership"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="05dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:fontFamily="@font/poppins_bold"
                        android:gravity="center"
                        android:src="@drawable/subscriptions" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:gravity="center"
                        android:text="@string/txt_subs"
                        android:textColor="@color/red_bg"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_schedules"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="05dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:fontFamily="@font/poppins_bold"
                        android:gravity="center"
                        android:src="@drawable/schedule" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:gravity="center"
                        android:text="@string/txt_schedule"
                        android:textColor="@color/red_bg"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_social"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="05dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:fontFamily="@font/poppins_bold"
                        android:gravity="center"
                        android:src="@drawable/social" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:gravity="center"
                        android:text="@string/txt_social"
                        android:textColor="@color/red_bg"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_support"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="05dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:fontFamily="@font/poppins_bold"
                        android:gravity="center"
                        android:src="@drawable/tech_suppot" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:gravity="center"
                        android:text="@string/txt_support"
                        android:textColor="@color/red_bg"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>