<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:hedgehog="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/devices_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="02dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="16dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:id="@+id/view_changer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/device_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/txt_fan"
                    android:textColor="@color/blue_bg"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/device_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="left"
                    android:singleLine="true"
                    android:text="Cento-001"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/device_conn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="Connected"
                    android:textColor="@color/green"
                    android:textSize="11sp"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="05dp"
                android:layout_marginBottom="05dp">

                <TextView
                    android:id="@+id/device_control"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="85dp"
                    android:layout_marginRight="85dp"
                    android:background="@drawable/green_control"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="CONTROL"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <com.polyak.iconswitch.IconSwitch
                    android:visibility="gone"
                    android:id="@+id/icon_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    app:isw_icon_size="12dp"
                    app:isw_thumb_color_left="@color/red"
                    app:isw_thumb_color_right="@color/green" />

                <TextView
                    android:id="@+id/device_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/txt_on"
                    android:textColor="@color/green"
                    android:textSize="20dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="02dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/device_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/device_location"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="left"
                    android:singleLine="true"
                    android:text="FT123"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/device_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center_horizontal|center_vertical"
                    android:singleLine="true"
                    android:text="@string/txt_drawing"
                    android:textColor="@color/grey"
                    android:textSize="14sp" />
            </RelativeLayout>
            <!--            <RatingBar-->
            <!--                android:id="@+id/ratingBar"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="center_horizontal"-->
            <!--                android:maxHeight="48dp"-->
            <!--                android:minHeight="48dp"-->
            <!--                android:stepSize="0.1"-->
            <!--                android:numStars="5"-->
            <!--                android:progressTint="@color/spinner_bg"-->
            <!--                android:secondaryProgressTint="@color/kprogresshud_grey_color"-->
            <!--                hedgehog:targetApi="lollipop" />-->
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>